--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -120,7 +120,7 @@
                 background: v.$white;
             }
             & .btn-ir {
-                background: v.$gradiante-main;
+                background: v.$main;
                 color: #fff;
             }
         }
