--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,70 @@
 .oferta .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
     bottom: -7px;
 }
+
+.clearfix{
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+}
+
+.clearfix{
+    input{
+        max-width: 50px;
+        margin: 0 10px 20px 0;
+    }
+}
+
+.section_paquetes_relacionados-content-swiper{
+    max-width: 1100px !important;
+    width: 100% !important;
+}
+
+.list_pasos{
+    margin: 50px auto !important;
+}
+
+
+.empty_bag{
+    padding: 100px 0;
+}
+.contenedor_empty{
+    box-shadow: 0 0 15px 0 rgba(0,0,0,0.2);
+    padding: 50px;
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
+}
+.contenedor_empty img{
+    max-width: 150px;
+    display: block;
+    margin: 0 auto;
+}
+.contenedor_empty p{
+    margin: 0;
+    padding: 40px 0px;
+}
+
+.fot-bground1{
+
+    
+    z-index: 1;
+}
+
+.fot-bground1:before{
+
+    z-index: -1;
+
+}
+
+
+@media(max-width: 991px){
+    .empty_bag {
+        padding: 60px 0;
+    }
+}
+@media(max-width: 767px){
+    .empty_bag {
+        padding: 40px 0;
+    }
+}
