--- a/src/styles/_estilo.scss
+++ b/src/styles/_estilo.scss
@@ -20,6 +20,33 @@ body{
 
 }
 
+.modal_boy_scroll{
+    overflow-y: scroll !important;
+    height: calc(100vh - 220px);
+}
+
+/* Estilos para el scroll delgado */
+/* Establecer el grosor del scroll */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Establecer el color del fondo del scroll */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
+  /* Establecer el color del thumb (barra de desplazamiento) */
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+  
+  /* Establecer el color del thumb cuando se pasa el ratón por encima */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
 .wrapsection{
 
     position: relative;
@@ -98,7 +125,7 @@ a:hover, a:active, a:focus {text-decoration: none;}
 
 .boxfotter{
 
-    padding: 75px 0 24px;
+
 
 }
 
@@ -196,8 +223,10 @@ a:hover, a:active, a:focus {text-decoration: none;}
 
     transition: all ease 500ms;
 
+} 
+.tb_dy td{
+    vertical-align: middle !important;
 }
-
 .follow_us{
 
     text-align: center;
@@ -210,7 +239,7 @@ a:hover, a:active, a:focus {text-decoration: none;}
 
 .info h4,.enlaces h4, .contact_us h4{
 
-    margin-top: 30px;
+    // margin-top: 30px;
 
     color: #fff;
 
@@ -1742,7 +1771,7 @@ a:hover, a:active, a:focus {text-decoration: none;}
 
     height: 15px;
 
-    width: 0;
+    width: auto;
 
     top: calc(34% - 1px);
 
@@ -1754,9 +1783,8 @@ a:hover, a:active, a:focus {text-decoration: none;}
 
     transition: all .25s ease;
 
-    background-image: url(./../assets/images/nosotros/flor.png);
-    object-fit: contain;
-    /* background-size: 25px 15px; */
+    background-image: url(./../assets/public/img/logo/ie-favicon.png);
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 
@@ -2570,6 +2598,14 @@ nav.navbar.bootsnav .navbar-toggle {
 }
 
 
+.Mui-selected{
+    background: #FF0F29 !important;
+    color: white !important;
+}
+
+.swiper-77 .swiper-wrapper{
+    justify-content: center !important;
+}
 
 .mode-titlep1{
 
@@ -2583,6 +2619,9 @@ nav.navbar.bootsnav .navbar-toggle {
 
 }
 
+.impor_colla{
+    visibility: visible !important
+}
 
 
 .mode-subtitlep1{
@@ -3014,8 +3053,121 @@ nav.navbar.bootsnav .navbar-toggle {
     }
 
 }
+.sect-login{
+    padding-bottom: 10px;
+}
+.mycart-heading {
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
 
+.mycart-heading2 {
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.mycartpanel1 {
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    border-color: #ddd;
+    margin-bottom: 15px;
+}
+.mycartpanel1 .selectpicker{
+    padding: 6px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+.selectpicker{
+    padding: 6px;
+    border: 1px solid #ccc;
+    width: 200px;
+}
+.selectpicker:focus{
+    outline: none;
+}
+.mycartpanel2 {
+    background-color: #fff;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid #dddddd;
+    border-radius: 0px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    border-color: #ddd;
+    margin-bottom: 15px;
+}
+.mycartpanel1>.mycart-heading, 
+.mycartpanel2>.mycart-heading2 {
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
+.mycartpanel1 .mycart-title, 
+.mycartpanel2 .mycart-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 700;
+    color: inherit;
+}
+.mycartsale1 {
+    text-align: center;
+}
+.mycartotal-2 {
+    padding: 0px 10px;
+    background: #fff5bc;
+    border: 1px solid #f3e6a0;
+    border-radius: 4px;
+}
+.mycartotal-2 .no-margin {
+    margin: 0;
+}
+.mycartotal-2 .no-margin thead tr td{
+    padding: 10px 0px 0px 0px;
+}
+.mycartotal-2 .panel-title {
+    font-weight: 400;
+    font-size: 14px;
+    color: #7a6c1b;
+}
+.mycartotal-2 .env-pric-x1 {
+    font-weight: 700;
+    font-size: 14px;
+    color: #7a6c1b;
+    margin: 0;
+}
+.mycartsale1>h3 {
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
 
+.opciondespacho{
+    display: block !important;
+}
+
+.mycartsale1>h3>b {
+    font-size: 21px;
+    color: #f22a2a;
+}
+.mycartpanel1 .mycart-body, 
+.mycartpanel2 .mycart-body2 {
+    padding: 15px;
+}
+.mycartpanel2 .mycart-body2 .login-register{
+    border: 2px solid #000000;
+    background: #efefef;
+    padding: 1px 6px;
+    text-decoration: none;
+}
 
 .boxmodel .button {
 
@@ -3039,6 +3191,44 @@ nav.navbar.bootsnav .navbar-toggle {
 
 }
 
+.countarget-img{
+    display: flex;
+    flex-wrap: wrap;
+    color: #333333;
+    transition: all ease 300ms;
+    font-size: 14px;
+    margin-bottom: 10px;
+    padding: 6px 0;
+    width: 100%;
+    border: 1px solid #000;
+    background: #f1f1f1;
+}
+
+.countarget-img:hover,
+.countarget-img:active,
+.countarget-img:focus{
+    color: #868686;
+    cursor: pointer;
+}
+
+.countarget-img > img{
+    width: 80px;
+    display: inline-block;
+    float: left;
+    margin-right: 10px;
+    mix-blend-mode: darken;
+}
+
+.countarget-img > .countarget-box{
+    overflow: hidden;
+    font-weight: 700;
+    line-height: 50px;
+}
+
+.countarget-img > .countarget-box > span {
+    font-weight: 400;
+    color: #868686;
+}
 
 
 @media(max-width: 465px){
@@ -4341,7 +4531,7 @@ p .progress-linear {
 
     font-size: 14px;
 
-    color: #ff8d7c;
+    color: #FF0F29;
 
 }
 
@@ -4364,24 +4554,13 @@ p .progress-linear {
     text-align: left;
 
     color: v.$main;
-
+    font-weight: 500;
     margin-top: 4px;
 
 }
 
 @media(min-width: 588px) and (max-width: 991px){
 
-    .enlaces ul{
-
-        display: flex;
-
-    }
-
-    .enlaces li{
-
-        width: 25%;
-
-    }
 
 }
 
@@ -4389,7 +4568,6 @@ p .progress-linear {
 
 .btn_for_all{
     background: v.$main;
-    background: v.$gradiante-main;
     width: fit-content;
     color: #fff;
     display: block;
@@ -4976,8 +5154,6 @@ p .progress-linear {
     background-color: v.$main;
 
     border: 2px solid v.$main;
-
-    padding: 7px 19px 8px;
 
     position: relative;
 
@@ -7283,8 +7459,6 @@ p .progress-linear {
 
     margin: auto;
 
-    margin-top: 20px;
-
     padding: 25px;
 
     box-sizing: border-box;
@@ -7303,7 +7477,6 @@ p .progress-linear {
 
     border-top: 60px solid transparent;
 
-    content: "";
 
     height: 0;
 
@@ -7343,7 +7516,17 @@ p .progress-linear {
 
 }
 
+.mycart-heading{
+    padding: 20px ;
+    background: #f1f1f1;
 
+    h5{
+        font-weight: 800;
+        color: #303030;
+    }
+
+    border: 1px solid #c0c0c0;
+}
 
 .box-pasform textarea.form-control{
 
