--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,126 +2,216 @@
 @tailwind components;
 @tailwind utilities;
 
-.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
-    bottom: 100px;
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 100px;
 }
 
-.swiper-pagination-bullet{
-    width: 16px;
-    height: 16px;
-    @apply bg-main
+.swiper-pagination-bullet {
+  width: 16px;
+  height: 16px;
+  @apply bg-main;
 }
 
-.caption{
-    color: rgb(96, 57, 64) !important;
-    left: 25%;
-    width: 50%;
-    text-align: center;
-    top: 30%;
-    position: absolute;
+.svelte-1a1oxv8{
+    display: none !important;
 }
 
-.caption h3{
-
-    font-size: 65px;
-
-    margin-bottom: 20px;
-
-    font-weight: bold;
-
-    font-family: Playfair Display;
-
+#image0 {
+    background-image: url('./assets/public/img/logo/logo.png') !important;
 }
 
-.grey-text.text-lighten-3{
-
-    letter-spacing: 1px;
-
-    color: #534f4f !important;
-
-    line-height: 2;
-
-    font-size: 18px;
-
+.caption {
+  color: rgb(96, 57, 64) !important;
+  left: 25%;
+  width: 50%;
+  text-align: center;
+  top: 30%;
+  position: absolute;
 }
 
-.flowscuerpo{
-    margin-bottom: 10px;
-}
-
-.oferta .swiper-pagination-bullet{
-    width: 16px;
-    height: 16px;
-    @apply bg-main
-}
-
-.oferta .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
-    bottom: -7px;
-}
-
-.clearfix{
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-}
-
-.clearfix{
-    input{
-        max-width: 50px;
-        margin: 0 10px 20px 0;
-    }
-}
-
-.section_paquetes_relacionados-content-swiper{
-    max-width: 1100px !important;
-    width: 100% !important;
-}
-
-.list_pasos{
-    margin: 50px auto !important;
-}
-
-
-.empty_bag{
-    padding: 100px 0;
-}
-.contenedor_empty{
-    box-shadow: 0 0 15px 0 rgba(0,0,0,0.2);
-    padding: 50px;
-    max-width: 500px;
+.window {
+  &__wrapper {
+    padding: 40px;
+    width: 100%;
+    max-width: 700px;
     margin: 0 auto;
-    text-align: center;
-}
-.contenedor_empty img{
-    max-width: 150px;
-    display: block;
-    margin: 0 auto;
-}
-.contenedor_empty p{
-    margin: 0;
-    padding: 40px 0px;
-}
+    border-radius: 15px;
+    background: #f8f8f8;
+    box-shadow: 1px 2px 5px -3px rgba(0, 0, 0, 0.33);
+    -webkit-box-shadow: 1px 2px 5px -3px rgba(0, 0, 0, 0.33);
+    -moz-box-shadow: 1px 2px 5px -3px rgba(0, 0, 0, 0.33);
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 
-.fot-bground1{
+    &__head {
+      h2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 2.4rem;
+        font-weight: 500;
+        gap: 20px;
+        text-transform: uppercase;
+        font-family: "Poppins", sans-serif;
+        padding-bottom: 40px;
 
-    
-    z-index: 1;
-}
-
-.fot-bground1:before{
-
-    z-index: -1;
-
-}
-
-
-@media(max-width: 991px){
-    .empty_bag {
-        padding: 60px 0;
+        span {
+          img {
+            max-width: 50px;
+          }
+        }
+      }
     }
-}
-@media(max-width: 767px){
-    .empty_bag {
-        padding: 40px 0;
+
+    &__body {
+      text-align: center;
+
+      h3 {
+        font-size: 2.6rem;
+        padding-bottom: 20px;
+      }
+
+      p {
+        font-size: 2rem;
+        color: #797979;
+      }
+
+      picture {
+        img {
+          max-width: 200px;
+          display: block;
+          margin: 20px auto;
+        }
+      }
     }
+
+    &__footer {
+      &__what {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: fit-content;
+        gap: 20px;
+        background: #25d366;
+        transition: all 0.3s;
+        cursor: pointer;
+        text-decoration: none;
+        color: #fff;
+        border-radius: 8px;
+        padding: 15px 25px;
+        font-size: 1.8rem;
+        margin: 0 auto;
+        margin-top: 35px;
+        text-align: center;
+
+        &:hover {
+          background: #1fb657;
+        }
+      }
+    }
+  }
+}
+
+.caption h3 {
+  font-size: 65px;
+
+  margin-bottom: 20px;
+
+  font-weight: bold;
+
+  font-family: Playfair Display;
+}
+
+.grey-text.text-lighten-3 {
+  letter-spacing: 1px;
+
+  color: #534f4f !important;
+
+  line-height: 2;
+
+  font-size: 18px;
+}
+
+.flowscuerpo {
+  margin-bottom: 10px;
+}
+
+.oferta .swiper-pagination-bullet {
+  width: 16px;
+  height: 16px;
+  @apply bg-main;
+}
+
+.oferta .swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: -7px;
+}
+
+.clearfix {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
+.clearfix {
+  input {
+    max-width: 50px;
+    margin: 0 10px 20px 0;
+  }
+}
+
+.section_paquetes_relacionados-content-swiper {
+  max-width: 1100px !important;
+  width: 100% !important;
+}
+
+.list_pasos {
+  margin: 50px auto !important;
+}
+
+.empty_bag {
+  padding: 100px 0;
+}
+.contenedor_empty {
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  padding: 50px;
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
+.contenedor_empty img {
+  max-width: 150px;
+  display: block;
+  margin: 0 auto;
+}
+.contenedor_empty p {
+  margin: 0;
+  padding: 40px 0px;
+}
+
+.fot-bground1 {
+  z-index: 1;
+}
+
+.fot-bground1:before {
+  z-index: -1;
+}
+
+@media (max-width: 991px) {
+  .empty_bag {
+    padding: 60px 0;
+  }
+}
+@media (max-width: 767px) {
+  .empty_bag {
+    padding: 40px 0;
+  }
 }
